--- a/index.html
+++ b/index.html
@@ -5,16 +5,59 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link href="./src/static/output.css" rel="stylesheet">
 </head>
-<body>
-    <header>
-        <h1 class="text-blue-600">Welcome to My Website</h1>
-    </header>
-    <section>
-        <p class="text-purple-600">This is a static website!</p>
-    </section>
-    <h1 class="text-pink-200">whyyyy</h1>
-  <script src="script.js"></script>  
-  <!---->
+<body class="bg-base text-puce font-serif flex flex-col min-h-screen">
+  <main class="flex-grow">
+    <div class="pb-5 pt-5 text-center container mx-auto text-eggplant">
+        <ul class="justify-center flex space-x-4 text-viridian font-bold">
+        <li><a href="./" class="text-pink-200 hover:underline">Home</a></li>
+        <li><a href="./pages/blog.html" class="hover:underline">Blog</a></li>
+        <li><a href="./pages/notes.html" class="hover:underline"> Notes</a></li>
+      </ul>
+      </div>
+  <!-- Hero Section -->
+  <section class="pb-16">
+    <div class="container mx-auto text-center">
+      <h2 class="text-4xl font-serif font-bold mb-4">avi kumar</h2>
+      <p class="text-lg text-gray-700">third-year student at UNC Chapel Hill studying computer science and french; professional question asker; chaser of knowledge. This site is a collection of my projects, writings, thoughts, class notes, and 
+        professional information. It's a space to document my journey as a computer science student, future developer/engineer, and human being.
+        </p>
+    </div>
+  </section>
+
+  <!-- <section class="grid grid-cols-3">
+  <a class="card" href="https://studio-keys.onrender.com" target="_blank">
+    <span class="card-title">Studio Keys</span>
+    <span class="card-subtext">this is a description.</span>
+  </a>
+  <div class="card">hello</div>
+  <div class="card">hello</div>
+  <div class="card">hello</div>
+  <div class="card">hello
+    <span>hello1</span>
+  </div>
+</section> -->
+<section class="px-6">
+<h2 class="font-extrabold mb-5 text-2xl text-viridian">Projects</h2>
+<section class="grid grid-type py-2">
+  <a class="group card" href="https://studio-keys.onrender.com" target="_blank">
+    <span class="card-title">Studio Keys</span>
+    <span class="card-subtext">A Python-based tool designed to enable the easy retrieval and recovery 
+      of UI/UX designs created with the (now) defunct Invision prototyping tool.</span>
+  </a>
+  
+</section>
+</section>
+</main>
+
+  <!-- About the Site Section -->
+  
+
+
+  <!-- Footer -->
+  <footer class="bg-pink-200 text-white py-6">
+    <div class="container mx-auto text-center">
+      <p>&copy; 2024 Avi Kumar. All rights reserved.</p>
+    </div>
+  </footer>
 </body>
 </html>
-
