finalized first draft; ready to publish?

--- a/notes/comp455.html
+++ b/notes/comp455.html
@@ -2,6 +2,8 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Avi Kumar | Notes: COMP 455</title>
+  <link rel="icon" href="../assets/laptop.png">
   <link href="../src/static/output.css" rel="stylesheet">
 </head>
 <body class="bg-base flex flex-col h-screen">
