--- a/pages/blog.html
+++ b/pages/blog.html
@@ -4,6 +4,8 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link href="../src/static/output.css" rel="stylesheet">
+  <title>Avi Kumar | Blog</title>
+  <link rel="icon" href="../assets/laptop.png">
 </head>
 <body class="bg-base text-puce font-serif flex flex-col min-h-screen">
 
@@ -20,7 +22,7 @@
 <div class="container mx-auto text-center">
   <h2 class="text-4xl font-serif font-bold mb-4">avi kumar</h2>
   <p class="text-lg text-gray-700">a place to host, categorize, and document some of the things I do 
-    and think and make. a place to document my life, should someone someday be interested. 
+    and think and make. a scrapbook of my life (an interface for my brain?), should someone someday be interested. 
     I know I'll be; my memory isn't great.</p>
 </div>
 </section>
@@ -28,21 +30,29 @@
 <div class="flex justify-center items-center gap-4 mb-8 text-center">
   <a href="./crochet.html" class="inline-block w-1/5">
     <img src="../assets/IMG_9727.jpeg" alt="Image 2" class="w-full h-[300px] object-cover overflow-clip rounded-sm shadow-puce hover:shadow-pink-600 shadow-md border-2 border-puce">
-    <h1 class="mt-2 text-center text-viridian">(click for more crochet)</h1>
+    <h1 class="mt-2 text-center text-pink-400">(click for more crochet)</h1>
   </a>
 </div>
 
-
-<div name="thumbnail" class="max-w-4xl mx-auto py-10 px-6 bg-puce bg-opacity-20 text-center">
+<div class="bg-viridian bg-opacity-30 mx-32">
+<div name="thumbnail" class="max-w-5xl mx-auto pb-8 pt-6 px-6  text-center">
   <a href="./entries.html">
-    <h1 class="text-viridian text-xl font-bold">Blog</h1>
+    <h1 class="text-yinminblue text-xl font-bold pb-2 hover:text-lighterblue transition-all duration-75 max-w-fit text-center mx-auto">Posts</h1>
   </a>
   
   
-  <div id="poetry-preview" class="text-left text-gray-700">
+  <div id="poetry-preview" class="poetry-preview ">
+    <hr>
+    
 
   </div>
+  <a href="./entries.html">
+  <h1 class="text-black mt-4 px-4 text-lg font-bold text-left shadow-md bg-lighterblue hover:bg-[#4780ea] transition all duration-75 rounded-md max-w-fit">more</h1>
+</a>
 </div>
+</div>
+
+
 
   
   <!-- <header class="bg-opacity-40 bg-viridian text-white">
@@ -79,7 +89,7 @@
     </div>
   </footer>
 
-  <script src="../src/render2.js"></script>
+  <script src="../src/try2.js"></script>
 
 </body>
 </html>
