--- a/pages/crochet.html
+++ b/pages/crochet.html
@@ -3,6 +3,8 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link href="../src/static/output.css" rel="stylesheet">
+  <title>Avi Kumar | Crochet </title>
+  <link rel="icon" href="../assets/laptop.png">
 </head>
 <body class="bg-base text-puce font-serif flex flex-col min-h-screen">
   <main class="flex-grow">
