--- a/pages/notes.html
+++ b/pages/notes.html
@@ -3,6 +3,8 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link href="../src/static/output.css" rel="stylesheet">
+  <title>Avi Kumar | Notes</title>
+  <link rel="icon" href="../assets/laptop.png">
 </head>
 <body class="bg-base text-puce font-serif flex flex-col min-h-screen">
 <div class="pb-5 pt-5 text-center container mx-auto text-eggplant">
@@ -15,7 +17,7 @@
 <section class="pb-4">
   <div class="mx-auto text-center">
     <h2 class="text-4xl font-serif font-bold mb-2">archive: all course notes</h2>
-    <p class="text-lg text-gray-700">cornell notes are superior and yeah, i'd die on that hill. though i'm not sure if that's saying a lot...</p>
+    <p class="text-lg text-gray-700">cornell notes are superior and yes, i would die on that hill. though i'm not sure if that's saying a lot...</p>
   </div>
   </section>
 
@@ -26,32 +28,32 @@
         <ul class="space-y-4">
           <!-- Example Note Link -->
           <li>
-            <a href="../notes/comp550.html" class="block p-4 bg-white shadow-md rounded-lg hover:bg-puce hover:bg-opacity-30 transition-all duration-75">
+            <a href="../notes/comp550.html" class="block p-2 bg-white shadow-md rounded-lg hover:bg-puce hover:bg-opacity-30 transition-all duration-75">
               <h2 class="text-xl text-viridian">COMP 550: Algorithms and Analysis</h2>
             </a>
           </li>
           <li>
-            <a href="../notes/comp311.html" class="block p-4 hover:bg-puce hover:bg-opacity-30 transition-all duration-75 shadow-md rounded-lg bg-white">
+            <a href="../notes/comp311.html" class="block p-2 hover:bg-puce hover:bg-opacity-30 transition-all duration-75 shadow-md rounded-lg bg-white">
               <h2 class="text-xl text-hgreen">COMP 311: Computer Organization</h2>
             </a>
           </li>
           <li>
-            <a href="../notes/comp590.html" class="block p-4 hover:bg-puce hover:bg-opacity-30 transition-all duration-75 shadow-md rounded-lg bg-white">
+            <a href="../notes/comp590.html" class="block p-2 hover:bg-puce hover:bg-opacity-30 transition-all duration-75 shadow-md rounded-lg bg-white">
               <h2 class="text-xl text-viridian">COMP 590: Foundations of Software Engineering</h2>
             </a>
           </li>
           <li>
-            <a href="../notes/comp455.html" class="block p-4 bg-white shadow-md rounded-lg hover:bg-puce hover:bg-opacity-30 transition-all duration-75">
+            <a href="../notes/comp455.html" class="block p-2 bg-white shadow-md rounded-lg hover:bg-puce hover:bg-opacity-30 transition-all duration-75">
               <h2 class="text-xl text-hgreen">COMP 455: Models of Languages and Computation</h2>
             </a>
           </li>
           <li>
-            <a href="../notes/comp301.html" class="block p-4 bg-white shadow-md rounded-lg hover:bg-puce hover:bg-opacity-30 transition-all duration-75">
+            <a href="../notes/comp301.html" class="block p-2 bg-white shadow-md rounded-lg hover:bg-puce hover:bg-opacity-30 transition-all duration-75">
               <h2 class="text-xl text-viridian">COMP 301: Foundations of Programming</h2>
             </a>
           </li>
           <li>
-            <a href="../notes/comp211.html" class="block p-4 bg-white shadow-md rounded-lg hover:bg-puce hover:bg-opacity-30 transition-all duration-75">
+            <a href="../notes/comp211.html" class="block p-2 bg-white shadow-md rounded-lg hover:bg-puce hover:bg-opacity-30 transition-all duration-75">
               <h2 class="text-xl text-hgreen">COMP 211: Systems Fundamentals</h2>
             </a>
           </li>
