--- a/pages/resume.html
+++ b/pages/resume.html
@@ -3,7 +3,8 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Avi Kumar - Resume</title>
+  <title>Avi Kumar | Resume</title>
+  <link rel="icon" href="../assets/laptop.png">
   <link href="../src/static/output.css" rel="stylesheet">
 </head>
 <body class="bg-base text-gray-800 font-sans">
