--- a/index.html
+++ b/index.html
@@ -3,7 +3,8 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <script src='https://kit.fontawesome.com/a076d05399.js' crossorigin='anonymous'></script>
+  <title>Avi Kumar | Home</title>
+  <link rel="icon" href="./assets/laptop.png">
   <link href="./src/static/output.css" rel="stylesheet">
   <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" rel="alt_stylesheet">
 </head>
@@ -25,12 +26,12 @@
         professional information. It's a space to document my journey as a computer science student, future developer/engineer, and human being.
         </p>
     </div>
-    <div class="text-center container mx-auto mt-6 text-sm text-midblue">
+    <div class="text-center container mx-auto mt-6 text-sm text-viridian">
       <ul class="justify-center flex space-x-3 ">
-        <li><a class="bg-pink-300 bg-opacity-25 hover:underline hover:text-[#6392e9] duration-100 p-2 border-[1px] border-midblue shadow-md rounded-lg hover:border-lighterblue" href="https://www.linkedin.com/in/jahnavikumar/" target="_blank">Linkedin</a> </li>  
-        <li><a class="bg-pink-300 bg-opacity-25 hover:underline hover:text-[#6392e9] duration-100 p-2 border-[1px] border-midblue shadow-md rounded-lg hover:border-lighterblue" href="https://www.github.com/aviomg" target="_blank">Github</a> </li>
-        <li><a class="bg-pink-300 bg-opacity-25 hover:underline hover:text-[#6392e9] duration-100 p-2 border-[1px] border-midblue shadow-md rounded-lg hover:border-lighterblue" href="mailto:avikumar2048@gmail.com" target="_blank">avikumar2048@gmail.com</a> </li>
-        <li><a class="bg-pink-300 bg-opacity-25 hover:underline hover:text-[#6392e9] duration-100 p-2 border-[1px] border-midblue shadow-md rounded-lg hover:border-lighterblue" href="./assets/resume-avi-kumar.pdf" target="_blank">Resume</a> </li>
+        <li><a class="bg-pink-300 bg-opacity-35 hover:underline hover:text-[#6392e9] duration-100 p-2 border-[1px] border-viridian shadow-md rounded-lg hover:border-lighterblue" href="https://www.linkedin.com/in/jahnavikumar/" target="_blank">Linkedin</a> </li>  
+        <li><a class="bg-pink-300 bg-opacity-35 hover:underline hover:text-[#6392e9] duration-100 p-2 border-[1px] border-viridian shadow-md rounded-lg hover:border-lighterblue" href="https://www.github.com/aviomg" target="_blank">Github</a> </li>
+        <li><a class="bg-pink-300 bg-opacity-35 hover:underline hover:text-[#6392e9] duration-100 p-2 border-[1px] border-viridian shadow-md rounded-lg hover:border-lighterblue" href="mailto:avikumar2048@gmail.com" target="_blank">avikumar2048@gmail.com</a> </li>
+        <li><a class="bg-pink-300 bg-opacity-35 hover:underline hover:text-[#6392e9] duration-100 p-2 border-[1px] border-viridian shadow-md rounded-lg hover:border-lighterblue" href="./assets/resume-avi-kumar.pdf" target="_blank">Resume</a> </li>
       </ul>
     </div>
   </section>
@@ -48,7 +49,7 @@
     <span>hello1</span>
   </div>
 </section> -->
-<section id="projects" class="px-6 pb-20">
+<section id="projects" class="px-6 pb-16">
 <h2 class="font-extrabold mb-5 text-2xl text-midblue">Projects</h2>
 <section class="grid grid-type py-2">
   <a id="project_1" class="group card" href="https://studio-keys.onrender.com" target="_blank">
@@ -65,7 +66,7 @@
 </section>
 </section>
 
-<section class="px-6 pt-2 pb-6">
+<section class="px-6 pt-2 pb-8">
 <h2 class="font-extrabold text-2xl text-[#2d5baf] mb-3">Coursework</h2>
 <div id="classes" class="py-2 justify-normal items-stretch min-h-max flex flex-row flex-wrap gap-y-5 gap-x-4">
   <div class="widget">
