file name stuff

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Avi Kumar | Home</title>
-  <link rel="icon" href="./assets/laptop.png">
+  <link rel="icon" href="./public/laptop.png">
   <link href="./src/static/output.css" rel="stylesheet">
   <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" rel="alt_stylesheet">
 </head>
@@ -31,7 +31,7 @@
         <li><a class="bg-pink-300 bg-opacity-35 hover:underline hover:text-[#6392e9] duration-100 p-2 border-[1px] border-viridian shadow-md rounded-lg hover:border-lighterblue" href="https://www.linkedin.com/in/jahnavikumar/" target="_blank">Linkedin</a> </li>  
         <li><a class="bg-pink-300 bg-opacity-35 hover:underline hover:text-[#6392e9] duration-100 p-2 border-[1px] border-viridian shadow-md rounded-lg hover:border-lighterblue" href="https://www.github.com/aviomg" target="_blank">Github</a> </li>
         <li><a class="bg-pink-300 bg-opacity-35 hover:underline hover:text-[#6392e9] duration-100 p-2 border-[1px] border-viridian shadow-md rounded-lg hover:border-lighterblue" href="mailto:avikumar2048@gmail.com" target="_blank">avikumar2048@gmail.com</a> </li>
-        <li><a class="bg-pink-300 bg-opacity-35 hover:underline hover:text-[#6392e9] duration-100 p-2 border-[1px] border-viridian shadow-md rounded-lg hover:border-lighterblue" href="./assets/resume-avi-kumar.pdf" target="_blank">Resume</a> </li>
+        <li><a class="bg-pink-300 bg-opacity-35 hover:underline hover:text-[#6392e9] duration-100 p-2 border-[1px] border-viridian shadow-md rounded-lg hover:border-lighterblue" href="./public/resume-avi-kumar.pdf" target="_blank">Resume</a> </li>
       </ul>
     </div>
   </section>
