--- a/pages/resume.html
+++ b/pages/resume.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Avi Kumar | Resume</title>
-  <link rel="icon" href="../assets/laptop.png">
+  <link rel="icon" href="../public/laptop.png">
   <link href="../src/static/output.css" rel="stylesheet">
 </head>
 <body class="bg-base text-gray-800 font-sans">
