--- a/notes/comp550.html
+++ b/notes/comp550.html
@@ -3,7 +3,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Avi Kumar | Notes: COMP 550</title>
-  <link rel="icon" href="../public/laptop.png">
+  <link rel="icon" href="../assets/laptop.png">
   <link href="../src/static/output.css" rel="stylesheet">
 </head>
 <body class="bg-base flex flex-col h-screen">
@@ -20,7 +20,7 @@
 
         <main class="flex-grow flex justify-center items-center mb-4">
         <div class="pdf-container border-2 border-amber-700 mx-auto my-auto h-/2/4 mb-4 w-1/2 bg-gray-100 shadow-lg rounded-lg overflow-hidden">
-        <iframe src="../public/COMP 550.pdf"
+        <iframe src="../assets/COMP 550.pdf"
                 class="w-full h-full border-none">
         </iframe>
       </div>
