--- a/pages/blog.html
+++ b/pages/blog.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link href="../src/static/output.css" rel="stylesheet">
   <title>Avi Kumar | Blog</title>
-  <link rel="icon" href="../public/laptop.png">
+  <link rel="icon" href="../assets/laptop.png">
 </head>
 <body class="bg-base text-puce font-serif flex flex-col min-h-screen">
 
@@ -29,7 +29,7 @@
 
 <div class="flex justify-center items-center gap-4 mb-8 text-center">
   <a href="./crochet.html" class="inline-block w-1/5">
-    <img src="../public/IMG_9727.jpeg" alt="Image 2" class="w-full h-[300px] object-cover overflow-clip rounded-sm shadow-puce hover:shadow-pink-600 shadow-md border-2 border-puce">
+    <img src="../assets/IMG_9727.jpeg" alt="Image 2" class="w-full h-[300px] object-cover overflow-clip rounded-sm shadow-puce hover:shadow-pink-600 shadow-md border-2 border-puce">
     <h1 class="mt-2 text-center text-pink-400">(click for more crochet)</h1>
   </a>
 </div>
