--- a/pages/crochet.html
+++ b/pages/crochet.html
@@ -4,7 +4,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link href="../src/static/output.css" rel="stylesheet">
   <title>Avi Kumar | Crochet </title>
-  <link rel="icon" href="../public/laptop.png">
+  <link rel="icon" href="../assets/laptop.png">
 </head>
 <body class="bg-base text-puce font-serif flex flex-col min-h-screen">
   <main class="flex-grow">
@@ -24,10 +24,10 @@
 </section>
 
 <div class="flex justify-center items-center gap-4 mb-8">
-  <img src="../public/IMG_9727.jpeg" alt="Image 1" class="w-1/6 shadow-lg rounded-sm border-2 border-viridian">
-  <img src="../public/527C1050-2ECA-4130-B11D-15E32F3486BB_1_105_c.jpeg" alt="Image 3" class="max-h-[200px] object-contain rounded-sm border-viridian border-2">
-  <img src="../public/IMG_1412.jpeg" alt="Image 2" class="w-1/6 rounded-sm shadow-md border-2 border-viridian">
-  <img src="../public/671FB1A9-77AE-43B1-9445-78979391D617_1_105_c.jpeg" alt="Image 2" class="max-h-[230px] object-cover border-viridian border-2 rounded-sm">
+  <img src="../assets/IMG_9727.jpeg" alt="Image 1" class="w-1/6 shadow-lg rounded-sm border-2 border-viridian">
+  <img src="../assets/527C1050-2ECA-4130-B11D-15E32F3486BB_1_105_c.jpeg" alt="Image 3" class="max-h-[200px] object-contain rounded-sm border-viridian border-2">
+  <img src="../assets/IMG_1412.jpeg" alt="Image 2" class="w-1/6 rounded-sm shadow-md border-2 border-viridian">
+  <img src="../assets/671FB1A9-77AE-43B1-9445-78979391D617_1_105_c.jpeg" alt="Image 2" class="max-h-[230px] object-cover border-viridian border-2 rounded-sm">
 
 </div>
 
