--- a/pages/notes.html
+++ b/pages/notes.html
@@ -4,7 +4,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link href="../src/static/output.css" rel="stylesheet">
   <title>Avi Kumar | Notes</title>
-  <link rel="icon" href="../public/laptop.png">
+  <link rel="icon" href="../assets/laptop.png">
 </head>
 <body class="bg-base text-puce font-serif flex flex-col min-h-screen">
 <div class="pb-5 pt-5 text-center container mx-auto text-eggplant">
