--- a/pages/entries.html
+++ b/pages/entries.html
@@ -55,7 +55,7 @@
     <p>&copy; 2024 Avi Kumar. All rights reserved.</p>
   </div>
 </footer>
-<script src="../src/format_poem.js"></script>
+<script src="../src/format_poem2.js"></script>
 </body>
 </html>
       
