--- a/pages/blog.html
+++ b/pages/blog.html
@@ -46,7 +46,7 @@
     
 
   </div>
-  <a href="./entries.html">
+  <a id="loadmore" >
   <h1 class="text-black mt-4 px-4 text-lg font-bold text-left shadow-md bg-lighterblue hover:bg-[#4780ea] transition all duration-75 rounded-md max-w-fit">more</h1>
 </a>
 </div>
@@ -89,7 +89,7 @@
     </div>
   </footer>
 
-  <script src="../src/try2.js"></script>
 
 </body>
+<script src="../src/try2.js" type="text/javascript"></script>
 </html>
