added table of contents and code display

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
       Avi Kumar
       <span class="block text-3xl text-[#3a6d5b] font-normal">student, software engineer, writer, professional question asker</span>
       <div class="mt-[50px] mb-[-80px] text-[#3a6d5b] text-lg ">
-        welcome to my page!
+        welcome to my page! &darr;
       </div>
     </h1>
   </div>
@@ -36,8 +36,8 @@
     <div class="container mx-auto text-center">
 
       <h2  class="text-4xl font-serif font-bold mb-4">avi kumar</h2>
-      <p class="text-lg text-gray-700">third-year student at UNC Chapel Hill studying computer science and french; professional question asker; chaser of knowledge. This site is a collection of my projects, writings, thoughts, class notes, and 
-        professional information. It's a space to document my journey as a computer science student, future developer/engineer, and human being.
+      <p class="text-lg text-gray-700">third-year student at UNC Chapel Hill studying computer science and french. This site is a collection of my projects, notes, thoughts,
+         professional information, and more. It's a space to document my journey as a computer science student, future developer/engineer, and human being. thanks for visiting!
         </p>
     </div>
     <div class="text-center container mx-auto mt-6 text-sm text-viridian">
