--- a/pages/blog.html
+++ b/pages/blog.html
@@ -22,8 +22,7 @@
 <div class="container mx-auto text-center">
   <h2 class="text-4xl font-serif font-bold mb-4">avi kumar</h2>
   <p class="text-lg text-gray-700">a place to host, categorize, and document some of the things I do 
-    and think and make. a scrapbook of my life (an interface for my brain?), should someone someday be interested. 
-    I know I'll be; my memory isn't great.</p>
+    and think and make. a scrapbook of my life (an interface for my brain?).</p>
 </div>
 </section>
 
