--- a/pages/blog.html
+++ b/pages/blog.html
@@ -19,7 +19,7 @@
   </div>
 <!-- Hero Section -->
 <section class="pb-6">
-<div class="container mx-auto text-center">
+<div class="container mx-auto sm:mx-auto sm:p-0 lg:max-xl:p-2 p-2 text-center">
   <h2 class="text-4xl font-serif font-bold mb-4">avi kumar</h2>
   <p class="text-lg text-gray-700">a place to host, categorize, and document some of the things I do 
     and think and make. a scrapbook of my life (an interface for my brain?).</p>
@@ -27,7 +27,7 @@
 </section>
 
 <div class="flex justify-center items-center gap-4 mb-8 text-center">
-  <a href="./crochet.html" class="inline-block w-1/5">
+  <a href="./crochet.html" class="inline-block sm:w-1/5 md:max-lg:w-[50%] lg:max-xl:w-[40%] w-4/5 mx-auto ">
     <img src="../assets/IMG_9727.jpeg" alt="Image 2" class="w-full h-[300px] object-cover overflow-clip rounded-sm shadow-puce hover:shadow-pink-600 shadow-md border-2 border-puce">
     <h1 class="mt-2 text-center text-pink-400">(click for more crochet)</h1>
   </a>
@@ -36,7 +36,7 @@
 <div class="bg-viridian bg-opacity-30 mx-32">
 <div name="thumbnail" class="max-w-5xl mx-auto pb-8 pt-6 px-6  text-center">
   <a href="./entries.html">
-    <h1 class="text-yinminblue text-xl font-bold pb-2 hover:text-lighterblue transition-all duration-75 max-w-fit text-center mx-auto">Posts</h1>
+    <h1 class="text-lighterblue text-xl font-bold px-2 py-1 mb-2 hover:bg-blue-200 hover:bg-opacity-70 border-2 border-lighterblue hover:border-lighterblue  hover:text-lighterblue  transition-all duration-75 max-w-fit text-center mx-auto">All Posts</h1>
   </a>
   
   
