--- a/pages/entries.html
+++ b/pages/entries.html
@@ -57,7 +57,7 @@
   </ul>
 
 
-<div id="archived-entries" class="max-w-4xl mx-auto pb-10 py-4 px-6">
+<div id="archived-entries" class="max-w-4xl mx-auto pb-10 py- px-6">
 
 
 </div>
