initial page started

--- a/index.html
+++ b/index.html
@@ -36,8 +36,9 @@
     <div id="cont" class="pb-5 pt-5 text-center container mx-auto text-eggplant">
         <ul class="justify-center flex space-x-4 text-viridian font-bold">
         <li><a href="./" class="text-puce hover:underline">Home</a></li>
-        <li><a href="./pages/blog.html" class="hover:underline">Blog</a></li>
+        <li><a href="./pages/blog.html" class=" hover:underline">Blog</a></li>
         <li><a href="./pages/notes.html" class="hover:underline"> Notes</a></li>
+        <li><a href="./pages/about.html" class="hover:underline">About</a></li>
       </ul>
       </div>
   <!-- Hero Section -->
