--- a/index.html
+++ b/index.html
@@ -35,11 +35,11 @@
   <main class="flex-grow">
     <div id="cont" class="pb-5 pt-5 text-center container mx-auto text-eggplant">
         <ul class="justify-center flex space-x-4 text-viridian font-bold">
-        <li><a href="./" class="text-puce hover:underline duration-150">Home</a></li>
-        <li><a href="./pages/about.html" class="p-1 hover:underline ">About</a></li>
-        <li><a href="./pages/blog.html" class=" p-1 hover:underline ">Blog</a></li>
-        <li><a href="./pages/notes.html" class="p-1 hover:underline  "> Notes</a></li>
-        <li><a href="./pages/crochet.html" class="p-1  hover:underline ">Crochet</a></li>
+        <li><a href="./" class="text-puce underline">Home</a></li>
+        <li><a href="./pages/about.html" class="p-1 underline hover:text-puce duration-150">About</a></li>
+        <li><a href="./pages/blog.html" class=" p-1 underline hover:text-puce duration-150 ">Blog</a></li>
+        <li><a href="./pages/notes.html" class="p-1 underline hover:text-puce duration-150 "> Notes</a></li>
+        <li><a href="./pages/crochet.html" class="p-1  underline hover:text-puce duration-150">Crochet</a></li>
 
        
       </ul>
