--- a/pages/blog.html
+++ b/pages/blog.html
@@ -21,10 +21,13 @@
   <main class="flex-grow">
   <div class="pb-5 pt-5 text-center container mx-auto text-eggplant">
     <ul class="justify-center flex space-x-4 text-viridian font-bold">
-    <li><a href="../index.html#cont" class="hover:underline">Home</a></li>
-    <li><a href="./blog.html" class="text-puce hover:underline"> Blog</a></li>
-    <li><a href="./notes.html" class="hover:underline"> Notes</a></li>
-  </ul>
+      <li><a href="../index.html#cont" class="underline hover:text-puce duration-150">Home</a></li>
+      <li><a href="./about.html" class="underline hover:text-puce duration-150">About</a></li>
+  
+      <li><a href="./blog.html" class="text-puce underline"> Blog</a></li>
+      <li><a href="./notes.html" class="underline hover:text-puce duration-150"> Notes</a></li>
+      <li><a href="./crochet.html" class="underline hover:text-puce duration-150">Crochet</a></li>
+    </ul>
   </div>
 <!-- Hero Section -->
 <section class="pb-6">
