--- a/pages/crochet.html
+++ b/pages/crochet.html
@@ -19,10 +19,12 @@
   <main class="flex-grow">
   <div class="pb-5 pt-5 text-center container mx-auto text-eggplant">
     <ul class="justify-center flex space-x-4 text-viridian font-bold">
-    <li><a href="../#cont" class="hover:underline">Home</a></li>
-    <li><a href="./blog.html" class="hover:underline"> Blog</a></li>
-    <li><a href="./notes.html" class="hover:underline"> Notes</a></li>
-  </ul>
+      <li><a href="../#cont" class="underline hover:text-puce duration-150">Home</a></li>
+      <li><a href="./about.html" class="underline hover:text-puce duration-150">About</a></li>
+      <li><a href="./blog.html" class="underline hover:text-puce duration-150"> Blog</a></li>
+      <li><a href="./notes.html" class="underline hover:text-puce duration-150"> Notes</a></li>
+      <li><a href="./" class=" text-puce underline">Crochet</a></li>
+    </ul>
   </div>
 <!-- Hero Section -->
 <section class="pb-6">
