--- a/pages/entries.html
+++ b/pages/entries.html
@@ -29,10 +29,12 @@
   <main class="flex-grow">
     <div id="nav" class="pb-0 pt-5 text-center container mx-auto text-eggplant">
         <ul class="justify-center flex space-x-4 text-viridian font-bold">
-        <li><a href="../#cont" class="hover:underline">Home</a></li>
-        <li><a href="./blog.html" class="text-puce hover:underline"> Blog</a></li>
-        <li><a href="./notes.html" class="hover:underline"> Notes</a></li>
-      </ul>
+          <li><a href="../#cont" class="underline hover:text-puce duration-150">Home</a></li>
+          <li><a href="./about.html"class="underline hover:text-puce duration-150">About</a></li>
+          <li><a href="./blog.html" class="text-puce underline"> Blog</a></li>
+          <li><a href="./notes.html" class="underline hover:text-puce duration-150"> Notes</a></li>
+          <li><a href="./crochet.html"class="underline hover:text-puce duration-150">Crochet</a></li>
+        </ul>
       </div>
       <header class="pb-10 pt-8">
         <div class="container mx-auto text-center">
