--- a/pages/notes.html
+++ b/pages/notes.html
@@ -18,10 +18,12 @@
 <body class="bg-base text-puce font-serif flex flex-col min-h-screen">
 <div class="pb-5 pt-5 text-center container mx-auto text-eggplant">
   <ul class="justify-center flex space-x-4 text-viridian font-bold">
-  <li><a href="../#cont" class="hover:underline">Home</a></li>
-  <li><a href="./blog.html" > Blog</a></li>
-  <li><a href="./notes.html" class="text-puce hover:underline"> Notes</a></li>
-</ul>
+    <li><a href="../#cont" class="underline hover:text-puce duration-150">Home</a></li>
+    <li><a href="./about.html" class="underline hover:text-puce duration-150">About</a></li>
+    <li><a href="./blog.html" class="underline hover:text-puce duration-150" > Blog</a></li>
+    <li><a href="./notes.html" class="text-puce underline"> Notes</a></li>
+    <li><a href="./crochet.html" class="underline hover:text-puce duration-150" > Crochet</a></li>
+  </ul>
 </div>
 <section class="pb-4">
   <div class="mx-auto text-center">
