--- a/pages/blog.html
+++ b/pages/blog.html
@@ -40,7 +40,7 @@
 
 <div class="flex justify-center items-center gap-4 mb-8 text-center">
   <a href="./crochet.html" class="inline-block sm:w-1/5 md:max-lg:w-[50%] lg:max-xl:w-[40%] w-4/5 mx-auto ">
-    <img src="../assets/IMG_9727.jpeg" alt="Image 2" class="w-full h-[300px] object-cover overflow-clip rounded-sm shadow-puce hover:shadow-pink-600 shadow-md border-2 border-puce">
+    <img src="../assets/IMG_9727.webp" alt="Image 2" class="w-full h-[300px] object-cover overflow-clip rounded-sm shadow-puce hover:shadow-pink-600 shadow-md border-2 border-puce">
     <h1 class="mt-2 text-center text-pink-400">(click for more crochet)</h1>
   </a>
 </div>
