updated home page and crochet blog page

--- a/index.html
+++ b/index.html
@@ -117,6 +117,21 @@
       centralized, interactive feed. Click to watch our demo video!</span>
   </a>
 </section>
+<div class="flex flex-row gap-x-4 min-h-max w-3/4 py-2 ">
+  <a id="project_2" class="group flex flex-col w-full text-wrap p-4 border-viridian border-[1px] hover:border-red-300" href="https://a02-calculator-avikumar.vercel.app/" target="_blank">
+    <span class="card-title">Fairly Odd Calculator</span>
+    <span class="card-subtext">A little exercise to practice using typescript, arrow and higher order functions, and my favorite colors.</span>
+  </a>
+  <a id="project_2" class="group flex flex-col w-full p-4 border-viridian border-[1px] hover:border-red-300" href="https://a03-pixel-art-maker-nathanflinchum.vercel.app/" target="_blank">
+    <span class="card-title">Pixel Art Maker</span>
+    <span class="card-subtext">Create pixel art on a canvas that persists on page reload, with functionality to download paintings as pngs. exercise to practice using event listeners.</span>
+  </a>
+  <a id="project_2" class="group flex flex-col w-full p-4 border-viridian border-[1px] hover:border-red-300" href="https://a04-wordle-avikumar.vercel.app/" target="_blank">
+    <span class="card-title">Wordle</span>
+    <span class="card-subtext">A recreation of wordle using React.js. Exercise to become familiar with the framework.</span>
+  </a>
+</div>
+
 </section>
 
 <section class="px-6 pt-2 pb-8">
